--- a/lib/binding_web/package.json
+++ b/lib/binding_web/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "terser": "^5.16.6"
+    "terser": "^5.16.6",
+    "ts-morph": "^17.0.1"
   }
 }
