cicd: run tests on ready to review PRs

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -3,6 +3,11 @@ name: CICD
 on:
   workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   push:
     branches-ignore:
       - release/v*
