--- a/highlight/Cargo.toml
+++ b/highlight/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tree-sitter-highlight"
 description = "Library for performing syntax highlighting with Tree-sitter"
-version = "0.20.1"
+version = "0.20.2"
 authors = [
   "Max Brunsfeld <maxbrunsfeld@gmail.com>",
   "Tim Clem <timothy.clem@gmail.com>",
@@ -20,6 +20,7 @@ crate-type = ["lib", "staticlib"]
 [dependencies]
 regex = "1"
 thiserror = "1.0"
+lazy_static = "1.2.0"
 
 [dependencies.tree-sitter]
 version = "0.20"
