--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
         runtime:
         - linux-arm64     #
         - linux-arm       #
+        - linux-armv7l    #
         - linux-x64       #
         - linux-x86       #
         - linux-i586      #
@@ -54,6 +55,7 @@ jobs:
         # 2. Add a new record to a matrix map in `cli/npm/install.js`
         - { runtime: linux-arm64     , target: aarch64-unknown-linux-gnu       , os: ubuntu-latest  , use-cross: true }
         - { runtime: linux-arm       , target: arm-unknown-linux-gnueabihf     , os: ubuntu-latest  , use-cross: true }
+        - { runtime: linux-armv7l    , target: armv7-unknown-linux-gnueabihf   , os: ubuntu-latest  , use-cross: true }
         - { runtime: linux-x64       , target: x86_64-unknown-linux-gnu        , os: ubuntu-20.04                     } #2272
         - { runtime: linux-x86       , target: i686-unknown-linux-gnu          , os: ubuntu-latest  , use-cross: true }
         - { runtime: linux-i586      , target: i586-unknown-linux-gnu          , os: ubuntu-latest  , use-cross: true }
@@ -68,14 +70,15 @@ jobs:
         - { runtime: macos-x64       , target: x86_64-apple-darwin             , os: macos-latest                     }
 
         # Cross compilers for C library
-        - { runtime: linux-arm64     , cc: aarch64-linux-gnu-gcc           , ar: aarch64-linux-gnu-ar               }
-        - { runtime: linux-arm       , cc: arm-unknown-linux-gnueabihf-gcc , ar: arm-unknown-linux-gnueabihf-gcc-ar }
-        - { runtime: linux-x86       , cc: i686-linux-gnu-gcc              , ar: i686-linux-gnu-ar                  }
-        - { runtime: linux-i586      , cc: i686-linux-gnu-gcc              , ar: i686-linux-gnu-ar                  }
-        - { runtime: linux-mipsel    , cc: mipsel-linux-gnu-gcc            , ar: mipsel-linux-gnu-ar                }
-        - { runtime: linux-mips64el  , cc: mips64el-linux-gnuabi64-gcc     , ar: mips64el-linux-gnuabi64-ar         }
-        - { runtime: linux-ppc64el   , cc: powerpc64le-linux-gnu-gcc       , ar: powerpc64le-linux-gnu-ar           }
-        - { runtime: linux-riscv64gc , cc: riscv64-linux-gnu-gcc           , ar: riscv64-linux-gnu-ar               }
+        - { runtime: linux-arm64     , cc: aarch64-linux-gnu-gcc             , ar: aarch64-linux-gnu-ar           }
+        - { runtime: linux-arm       , cc: arm-unknown-linux-gnueabihf-gcc   , ar: arm-unknown-linux-gnueabihf-ar }
+        - { runtime: linux-armv7l    , cc: arm-linux-gnueabihf-gcc           , ar: arm-linux-gnueabihf-ar         }
+        - { runtime: linux-x86       , cc: i686-linux-gnu-gcc                , ar: i686-linux-gnu-ar              }
+        - { runtime: linux-i586      , cc: i686-linux-gnu-gcc                , ar: i686-linux-gnu-ar              }
+        - { runtime: linux-mipsel    , cc: mipsel-linux-gnu-gcc              , ar: mipsel-linux-gnu-ar            }
+        - { runtime: linux-mips64el  , cc: mips64el-linux-gnuabi64-gcc       , ar: mips64el-linux-gnuabi64-ar     }
+        - { runtime: linux-ppc64el   , cc: powerpc64le-linux-gnu-gcc         , ar: powerpc64le-linux-gnu-ar       }
+        - { runtime: linux-riscv64gc , cc: riscv64-linux-gnu-gcc             , ar: riscv64-linux-gnu-ar           }
 
 
         # See #2041 tree-sitter issue
