--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ harness = false
 ansi_term = "0.12"
 anyhow = "1.0"
 atty = "0.2"
-clap = "2.32"
+clap = { version = "4.3.12", features = ["derive"] }
 ctrlc = { version = "3.2.5", features = ["termination"] }
 difference = "2.0"
 dirs = "3.0"
